add statistic
